# Cosmica

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  README.md  SECURITY.md  TODO.md  cosmica.spec  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  release.yml
cosmica/: __init__.py  __main__.py
cosmica/ai/: model_manager.py  smart_processor.py
cosmica/core/: abe.py  background.py  background_neutralization.py  banding.py  batch.py  calibration.py  catalog.py  channels.py  chromatic_aberration.py  color_calibration.py  color_tools.py  cosmetic.py  curves.py  debayer.py  deconvolution.py  denoise.py  device_manager.py  drizzle.py  dso_catalog.py  equipment.py  filters.py  gpu_stars.py  hdr.py  histogram_transform.py  image_io.py  local_contrast.py  lrgb.py  masks.py  morphology.py  mosaic.py  multi_session.py  narrowband.py  pixel_math.py  plate_solve.py  presets.py  project.py  psf.py  scripting.py  spcc.py  stacking.py  (+11 more)
cosmica/licensing/: license_manager.py
cosmica/resources/: cameras.json  catalog.json  filters.json  telescopes.json
cosmica/ui/: app.py  main_window.py  theme.py
cosmica/updater/: auto_updater.py
docs/: getting-started.md  tools.md  workflow.md
scripts/: train_denoise_model.py
tests/test_ai/: test_ai_denoise.py  test_ai_sharpen.py  test_denoise_model.py  test_model_manager.py  test_sharpen_model.py  test_smart_processor.py  test_starnet.py  test_tiled.py  test_unet.py
tests/test_core/: test_abe.py  test_background.py  test_banding.py  test_batch.py  test_calibration.py  test_channels.py  test_chromatic_aberration.py  test_color_calibration.py  test_color_tools.py  test_cosmetic.py  test_curves.py  test_deconvolution.py  test_denoise.py  test_device_manager.py  test_drizzle.py  test_equipment.py  test_filters.py  test_gpu_stars.py  test_hdr.py  test_histogram_transform.py  test_image_export.py  test_image_io.py  test_local_contrast.py  test_masks.py  (+18 more)
(+40 files in other folders)
